--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "files.associations": {
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "stdbool.h": "c",
+    "stdio.h": "c",
+    "fila.h": "c"
   },
   "C_Cpp.default.compilerPath": "C:\\MinGW\\bin\\gcc.exe"
 }
